--- a/views/reports/campaignAnalysisReport.ejs
+++ b/views/reports/campaignAnalysisReport.ejs
@@ -1,47 +1,98 @@
 <% include ./../header.ejs %>
-<div ng-app="moneyReportApp" class="row-fluid" ng-controller="formCtrl">
+<div ng-app="campaignApp" class="row-fluid" ng-controller="campaignCtrl">
   <div class="span12">
 	  <form class="form-horizontal" role="form">
-	  <legend>Campaign Analysis</legend>
-	  
-	  <!--Multiple IDs can be seperated by comma, for example '100,101,102'-->
-	  <div class="form-group">
-	    <label class="control-label col-sm-2">Campaign ID</label>
-	    <div class="col-sm-10">
-	    <input type="text" id="startDate" ng-model="reportRequest.campaignId">
-	    </div>
-	  </div>
-	  
-	  <div class="form-group">
-	    <label class="control-label col-sm-2">Start Date</label>
-	    <div class="col-sm-10">
-	    <input type="text" id="startDate" ng-model="reportRequest.startDate">
-	    </div>
-	  </div>
-	  
-	  <div class="form-group">
-	    <label class="control-label col-sm-2">End Date</label>
-	    <div class="col-sm-10"">
-	    <input type="text"id="endDate" ng-model="reportRequest.endDate">
-	    </div>
-	  </div>
-	  
-	  <div class="form-group">
-	    <div  class="col-sm-offset-2 col-sm-10">
-	    <button type="submit" class="btn btn-primary" ng-click="generateReport()">Generate Report</button>
-	    </div>
-	  </div>
+		  <legend>Campaign Analysis</legend>
+		  
+		  <div class="col-md-4 ">
+			  <div class="form-group">
+			    <label class="control-label col-md-6">Start Date</label>
+			    <div class="col-md-6">
+			    <input type="text" id="startDate" ng-model="reportRequest.startDate">
+			    </div>
+			  </div>
+			  
+			  <div class="form-group">
+			    <label class="control-label col-md-6">End Date</label>
+			    <div class="col-md-6"">
+			    <input type="text"id="endDate" ng-model="reportRequest.endDate">
+			    </div>
+			  </div>
+			  
+			  <div class="form-group">
+			  <!--Multiple IDs can be seperated by comma, for example '100,101,102'-->
+			    <label class="control-label col-md-6">Campaign IDs</label>
+			    <div class="col-md-6">
+			      <input type="text" ng-model="reportRequest.campaignIds">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label class="control-label col-md-6">Publisher IDs</label>
+			    <div class="col-md-6"">
+			      <input type="text" ng-model="reportRequest.publisherIds">
+			    </div>
+			  </div>
+		  </div>
+		  
+	      <div class="col-md-3">
+		      <div class="form-group">
+			    <label class="control-label col-md-6">Group By</label>
+			    <div class="col-md-6">
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.adgroup"> Adgroup </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.app"> App </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.campaign"> Campaign </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.city"> City </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.creative"> Creative </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.day"> Day </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.hour"> Hour </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.iabCategory"> IABCategory </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.poi"> POI </label>
+				   </div>
+				   <div class="checkbox">
+				      <label> <input type="checkbox" ng-model="reportRequest.groupBy.publisher"> Publisher </label>
+				   </div>
+			    </div>  
+		      </div>
+		  </div>
+		  <div class="col-md-2">
+			  <div class="form-group">
+			    <div  class="col-md-offset-6 col-md-6">
+			      <button type="submit" class="btn btn-primary" ng-click="generateReport()">Generate Report</button>
+			    </div>
+			  </div>
+		  </div>
 	  </form>
   </div>
 </div>
 
 <script>
-var app = angular.module('moneyReportApp', []);
-app.controller('formCtrl', function($scope,$http) {
+var app = angular.module('campaignApp', []);
+app.controller('campaignCtrl', function($scope,$http) {
+//	$scope.validateRequest() =function() {
+//		var reportRequest = $scope.reportRequest;
+//	}
+	
     $scope.generateReport = function() {
 
     $http({
-        url: '/reports/comparePublishers',
+        url: '/reports/campaignAnalysis',
         method: 'POST',
         responseType: 'arraybuffer',
         data: $scope.reportRequest, //this is your json data string
@@ -53,7 +104,7 @@ app.controller('formCtrl', function($scope,$http) {
         var blob = new Blob([data], {
             type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
         });
-        saveAs(blob, 'monetization_report' + '.xlsx');
+        saveAs(blob, 'campaign_analysis_report' + '.xlsx');
     }).error(function(){
         //Some error log
        alert('Failed to get the report data!')
