--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,8 @@
+    
+    <div id="loadingDiv" style="display:none">
+        <center><img src="/images/loading.gif"></center>
+    </div>
+
     <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>    
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
@@ -7,6 +12,6 @@
     
     
     <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>   
-    
+
   </body>
 </html>
