--- a/views/reports/campaignAnalysisReport.ejs
+++ b/views/reports/campaignAnalysisReport.ejs
@@ -77,7 +77,7 @@
 		  <div class="col-md-5">
 			  <div class="form-group">
 			    <div  class="col-md-offset-1 col-md-11">
-			      <button type="submit" class="btn btn-primary" ng-click="generateReport()">Generate Report</button>
+			      <button type="submit" class="btn btn-primary" ng-click="generateReport()">Download Report</button>
 			    </div>
 			  </div>
 			  <div class="form-group">
