--- a/views/reports/comparePublishersReport.ejs
+++ b/views/reports/comparePublishersReport.ejs
@@ -19,7 +19,7 @@
 	  
 	  <div class="form-group">
 	    <div  class="col-sm-offset-2 col-sm-10">
-	    <button type="submit" class="btn btn-primary" ng-click="generateReport()">Generate Report</button>
+	    <button type="submit" class="btn btn-primary" ng-click="generateReport()">Download Report</button>
 	    </div>
 	  </div>
 	  </form>
