set default publisher cost diff to be 1.05

--- a/views/reports/campaignDailyReport.ejs
+++ b/views/reports/campaignDailyReport.ejs
@@ -35,7 +35,7 @@
 			  <div class="form-group">
 			    <label class="control-label col-md-6">Publisher Cost Diff</label>
 			    <div class="col-md-6">
-			    <input type="text" placeholder=""  name="publisherCostDiff" ng-model="reportRequest.publisherCostDiff" ng-pattern="/^\d+($|.\d+$)/">
+			    <input type="text" placeholder="default to 1.05"  name="publisherCostDiff" ng-model="reportRequest.publisherCostDiff" ng-pattern="/^\d+($|.\d+$)/">
 			    </div>
 			  </div>
 			  <div class="form-group">
